--- a/src/nav_iframe.html
+++ b/src/nav_iframe.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
         <script src = "ClientGlobalContext.js.aspx" type = "text/javascript"></script>
         <script>
+
+        const creditColumnId = 0;
+        const modelColumnId = 1;
+
            $(document).ready(function () {
                "use strict";
                var oParameters = GetGlobalContext().getQueryStringParameters();
@@ -14,22 +18,23 @@
 
            function fnOnPageLoad(sParentCustId){
                "use strict";
-               debugger;
 
-            var contFetchXML =        "<fetch distinct='false'>" +
+            var contFetchXML =        "<fetch distinct='true'>" +
                                         "<entity name='nav_agreement'>" +
                                             "<link-entity name='nav_auto' from='nav_autoid' to='nav_autoid' alias='na'>" +
                                                 "<attribute name='nav_modelid' />" +
                                                 "<filter>" +
                                                     "<condition attribute='nav_brandid' operator='eq' value='" + sParentCustId + "' />" +
                                                 "</filter>" +
-                                                "<link-entity name='nav_model' from='nav_modelid' to='nav_modelid' alias='nm'>" +
-                                                    "<attribute name='nav_name' />" +
+                                                "<link-entity name='nav_model' from='nav_modelid' to='nav_modelid'>" +
+                                                    "<attribute name='nav_modelid' alias='nav_modelid_key'/>" +
+                                                    "<attribute name='nav_name' alias='nav_modelname'/>" +
                                                 "</link-entity>" +
                                             "</link-entity>" +
-                                            "<link-entity name='nav_credit' from='nav_creditid' to='nav_creditid' alias='nc'>" +
-                                                "<attribute name='nav_creditperiod' />" +
-                                                "<attribute name='nav_name' />" +
+                                            "<link-entity name='nav_credit' from='nav_creditid' to='nav_creditid'>" +
+                                                "<attribute name='nav_creditid' alias='nav_creditid_key'/>" +
+                                                "<attribute name='nav_creditperiod' alias='nav_creditperiod'/>" +
+                                                "<attribute name='nav_name' alias='nav_creditname' />" +
                                             "</link-entity>" +
                                         "</entity>" +
                                     "</fetch>";
@@ -43,12 +48,12 @@
                    var oResult = result.entities;
                    if(oResult != null)
                    {
-                        $("CreditInfoTable").DataTable({
+                        $("#CreditInfoTable").DataTable({
                            "data": oResult,
                            "columns":[
-                               {data: 'nc.nav_name'},
-                               {data: 'nm.nav_name'},
-                               {data: 'nc.nav_creditperiod'}
+                              {'data': 'nav_creditname'},
+                              {'data': 'nav_modelname'},
+                              {'data': 'nav_creditperiod'}
                                //{
                                  //  "data":"nav_agreementid",
                                    //"defaultContent": "<i>Not set</i>"
@@ -62,17 +67,58 @@
                    Xrm.Utility.alertDialog(oError.message, null);
                }
            )
-        }
-        //class="cell-border"
+        };
+ 
+
+        $(function () {
+            $("#CreditInfoTable").on('click','td',function () {
+                var table = $('#CreditInfoTable').DataTable();
+                let selectColumnIndex = table.cell(this)[0][0].column;
+                let rowData = table.row(this).data();
+                if(selectColumnIndex != undefined && rowData != undefined)
+                {
+                    var options = {
+                    openInNewWindow : true
+                    };
+
+                    debugger;
+                    // parent.Xrm.Utility.openEntityForm('nav_credit', cellRowData.nav_creditid_key, null, options);
+               
+                    if(selectColumnIndex === creditColumnId)
+                    {
+                        openEntityForm("nav_credit", rowData.nav_creditid_key);
+                    }
+                    else if(selectColumnIndex === modelColumnId)
+                    {
+                        openEntityForm("nav_model", rowData.nav_modelid_key);
+                    }
+                }
+
+             });
+        });
+        function openEntityForm(entity_name, entityId){
+            var entityFormOptions = {};
+                        entityFormOptions["entityName"] = entity_name;
+                        entityFormOptions["entityId"] = entityId;
+                        //entityFormOptions["openInNewWindow"] = "true";
+
+                        Xrm.Navigation.openForm(entityFormOptions).then(
+                        function (success) {
+                            console.log(success);
+                        },
+                        function (error) {
+                            console.log(error);
+                        });
+        };
         </script>
     </head>
     <body>
-        <table id="CreditInfoTable">
+        <table id="CreditInfoTable" class="cell-border">
             <thead>
                 <tr>
-                    <th>Кредитная программа</th>
-                    <th>Модель</th>
-                    <th>Срок кредита</th>
+                    <td>Кредитная программа</td>
+                    <td>Модель</td>
+                    <td>Срок кредита</td>
                 </tr>
             </thead>
         </table>
